# prophet-hacks-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SUBMISSION_CONTRACT.md  pyproject.toml
agent/: __init__.py  calibrate.py  financials.py  independent.py  kalshi.py  llm.py  manifold.py  polymarket.py  predict.py  prediction_log.py  priors.py  sports.py  trading.py  weather.py
docs/: architecture-decisions.md
scripts/: analyze_predictions.py  backtest.py  build_backtest_fixture.py  build_diverse_fixture.py  capture_live_snapshots.py  check_kalshi_live.py  com.brierpatch.daily-calibration.plist  daily_calibration.sh  daily_morning_check.py  daily_submit.sh  evaluate_agent.sh  fit_calibration.py  monitor_eval_health.py  resolve_captures.py  resolve_predictions.py  sample_events.json  sweep_params.py  trader_backtest.py
tests/: conftest.py  test_calibrate.py  test_financials.py  test_independent.py  test_kalshi.py  test_llm.py  test_llm_ensemble.py  test_manifold.py  test_multi_outcome.py  test_polymarket.py  test_predict.py  test_prediction_log.py  test_priors.py  test_sports.py  test_trading.py  test_weather.py
tests/fixtures/: resolved_markets.jsonl
