[project]
name = "prophet-hacks-agent"
version = "0.0.1"
description = "Forecasting agent for Prophet Hacks 2026 (solo)."
requires-python = ">=3.11"
dependencies = [
    "ai-prophet-core>=0.1.3",
    "ai-prophet>=0.1.0",
    "anthropic>=0.40",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.8",
    "python-dotenv>=1.0",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent*"]

[tool.ruff]
line-length = 100
target-version = "py311"
