[project]
name = "prophet-hacks-agent"
version = "0.0.1"
description = "Forecasting agent for Prophet Hacks 2026 (team Brier Patch)."
requires-python = ">=3.11"
dependencies = [
    # Prophet Arena upstream — CLI + typed wire models for the eval contract
    "ai-prophet-core>=0.1.3",
    "ai-prophet>=0.1.0",
    # Cross-vendor LLM ensemble
    "anthropic>=0.40",
    "openai>=1.40",
    "google-genai>=1.0",
    # HTTP server
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.8",
    "python-dotenv>=1.0",
    "requests>=2.32",
    # GCS-backed calibration table + prediction-log mirror
    "google-cloud-storage>=2.18",
    # Crypto-prior spot quotes
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent*"]

[tool.ruff]
line-length = 100
target-version = "py311"
